infra/apps/finbrain/finbrain-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: finbrain-strip-prefix
  namespace: finbrain
spec:
  stripPrefix:
    prefixes:
      - /finbrain
